Use JDK11 in toolchain test instead of JDK9
Because JDK9 is already EOL and not installed on all build agents.